--- a/main.ipynb
+++ b/main.ipynb
@@ -1027,7 +1027,10 @@
     "# ideas of what to do with data\n",
     "- A list actors\n",
     "- use features to predict the worldwide \n",
-    "- use genres as categorical features (pd.get_dummies or whatever)\n"
+    "- use genres as categorical features (pd.get_dummies or whatever)\n",
+    "\n",
+    "- what makes our project unique: our genre and crew member can help predict the worldwide\n",
+    "- maybe we can predict wordwide revenue based on features (linear regression, multicollinearity?)\n"
    ]
   },
   {
