job offers logistic regression idea

--- a/working.ipynb
+++ b/working.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "[5000 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "array(['Entry', 'Mid', 'Senior', 'Executive'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
        "Other          2.937760        3.079427"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "       'Business', 'Mathematics'], dtype=object)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,23 +914,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student_ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Field_of_Study</th>\n",
+       "      <th>Current_Job_Level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S00001</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Arts</td>\n",
+       "      <td>Entry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S00002</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Law</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S00003</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Medicine</td>\n",
+       "      <td>Entry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>S00004</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>S00005</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Entry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4995</th>\n",
+       "      <td>S04996</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Arts</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4996</th>\n",
+       "      <td>S04997</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Law</td>\n",
+       "      <td>Entry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4997</th>\n",
+       "      <td>S04998</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Law</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4998</th>\n",
+       "      <td>S04999</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Law</td>\n",
+       "      <td>Entry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4999</th>\n",
+       "      <td>S05000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Senior</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['Student_ID', 'Age', 'Gender', 'High_School_GPA', 'SAT_Score',\n",
-       "       'University_Ranking', 'University_GPA', 'Field_of_Study',\n",
-       "       'Internships_Completed', 'Projects_Completed', 'Certifications',\n",
-       "       'Soft_Skills_Score', 'Networking_Score', 'Job_Offers',\n",
-       "       'Starting_Salary', 'Career_Satisfaction', 'Years_to_Promotion',\n",
-       "       'Current_Job_Level', 'Work_Life_Balance', 'Entrepreneurship',\n",
-       "       'Filter_Job_Level'],\n",
-       "      dtype='object')"
+       "     Student_ID  Gender    Field_of_Study Current_Job_Level\n",
+       "0        S00001    Male              Arts             Entry\n",
+       "1        S00002   Other               Law               Mid\n",
+       "2        S00003  Female          Medicine             Entry\n",
+       "3        S00004    Male  Computer Science               Mid\n",
+       "4        S00005    Male       Engineering             Entry\n",
+       "...         ...     ...               ...               ...\n",
+       "4995     S04996  Female              Arts               Mid\n",
+       "4996     S04997  Female               Law             Entry\n",
+       "4997     S04998  Female               Law               Mid\n",
+       "4998     S04999    Male               Law             Entry\n",
+       "4999     S05000  Female  Computer Science            Senior\n",
+       "\n",
+       "[5000 rows x 4 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +1085,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1404,7 @@
        "max            10.000000          1.000000          4.000000  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1461,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1381,8 +1495,8 @@
       "Dep. Variable:        Starting_Salary   R-squared:                       0.004\n",
       "Model:                            OLS   Adj. R-squared:                 -0.001\n",
       "Method:                 Least Squares   F-statistic:                    0.8341\n",
-      "Date:                Sat, 08 Mar 2025   Prob (F-statistic):              0.695\n",
-      "Time:                        00:00:55   Log-Likelihood:                -54992.\n",
+      "Date:                Sun, 09 Mar 2025   Prob (F-statistic):              0.695\n",
+      "Time:                        22:27:07   Log-Likelihood:                -54992.\n",
       "No. Observations:                5000   AIC:                         1.100e+05\n",
       "Df Residuals:                    4975   BIC:                         1.102e+05\n",
       "Df Model:                          24                                         \n",
@@ -1439,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1503,8 +1617,8 @@
       "Dep. Variable:        Starting_Salary   R-squared:                       0.004\n",
       "Model:                            OLS   Adj. R-squared:                  0.000\n",
       "Method:                 Least Squares   F-statistic:                     1.084\n",
-      "Date:                Sat, 08 Mar 2025   Prob (F-statistic):              0.361\n",
-      "Time:                        00:22:23   Log-Likelihood:                -54992.\n",
+      "Date:                Sun, 09 Mar 2025   Prob (F-statistic):              0.361\n",
+      "Time:                        22:27:07   Log-Likelihood:                -54992.\n",
       "No. Observations:                5000   AIC:                         1.100e+05\n",
       "Df Residuals:                    4981   BIC:                         1.101e+05\n",
       "Df Model:                          18                                         \n",
@@ -1554,17 +1668,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       5\n",
+       "1       4\n",
+       "2       0\n",
+       "3       1\n",
+       "4       4\n",
+       "       ..\n",
+       "4995    5\n",
+       "4996    5\n",
+       "4997    2\n",
+       "4998    5\n",
+       "4999    2\n",
+       "Name: Job_Offers, Length: 5000, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Job_Offers']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Student_ID', 'Age', 'Gender', 'High_School_GPA', 'SAT_Score',\n",
+       "       'University_Ranking', 'University_GPA', 'Field_of_Study',\n",
+       "       'Internships_Completed', 'Projects_Completed', 'Certifications',\n",
+       "       'Soft_Skills_Score', 'Networking_Score', 'Job_Offers',\n",
+       "       'Starting_Salary', 'Career_Satisfaction', 'Years_to_Promotion',\n",
+       "       'Current_Job_Level', 'Work_Life_Balance', 'Entrepreneurship',\n",
+       "       'Filter_Job_Level'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
   }
  ],
  "metadata": {
