--- a/working.ipynb
+++ b/working.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,13 @@
     "import seaborn as sns\n",
     "import statsmodels.formula.api as smf\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Data"
    ]
   },
   {
@@ -495,6 +502,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -687,7 +701,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['explicit'] = df['explicit'].astype(int)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "explicit\n",
+       "0    104253\n",
+       "1      9747\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['explicit'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +754,7 @@
        "Name: count, Length: 46589, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +786,7 @@
        "Name: count, Length: 31437, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +818,7 @@
        "Name: count, Length: 114, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,31 +828,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "explicit\n",
-       "False    104253\n",
-       "True       9747\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df['explicit'].value_counts()"
+    "## Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -845,80 +875,15 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df['explicit'] = df['explicit'].astype(int)\n"
+    "## Data Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "explicit\n",
-       "0    104253\n",
-       "1      9747\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['explicit'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "track_id             object\n",
-       "artists              object\n",
-       "album_name           object\n",
-       "track_name           object\n",
-       "popularity            int64\n",
-       "duration_ms           int64\n",
-       "explicit              int64\n",
-       "danceability        float64\n",
-       "energy              float64\n",
-       "key                   int64\n",
-       "loudness            float64\n",
-       "mode                  int64\n",
-       "speechiness         float64\n",
-       "acousticness        float64\n",
-       "instrumentalness    float64\n",
-       "liveness            float64\n",
-       "valence             float64\n",
-       "tempo               float64\n",
-       "time_signature        int64\n",
-       "track_genre          object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1171,7 @@
        "[114000 rows x 15 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,14 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1195,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.025\n",
       "Method:                 Least Squares   F-statistic:                     208.2\n",
       "Date:                Tue, 11 Mar 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        15:33:17   Log-Likelihood:            -5.1427e+05\n",
+      "Time:                        15:40:37   Log-Likelihood:            -5.1427e+05\n",
       "No. Observations:              114000   AIC:                         1.029e+06\n",
       "Df Residuals:                  113985   BIC:                         1.029e+06\n",
       "Df Model:                          14                                         \n",
@@ -1282,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1311,6 +1269,38 @@
     "names = model.params.index\n",
     "for i in range(1, exog.shape[1]):\n",
     "    print(f'VIF: {names[i]}: {variance_inflation_factor(exog, i): .3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "popularity\n",
+       "0      16020\n",
+       "22      2354\n",
+       "21      2344\n",
+       "44      2288\n",
+       "1       2140\n",
+       "       ...  \n",
+       "98         7\n",
+       "94         7\n",
+       "95         5\n",
+       "100        2\n",
+       "99         1\n",
+       "Name: count, Length: 101, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['popularity'].value_counts()"
    ]
   },
   {
