--- a/working.ipynb
+++ b/working.ipynb
@@ -732,6 +732,304 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "track_id             object\n",
+       "artists              object\n",
+       "album_name           object\n",
+       "track_name           object\n",
+       "popularity            int64\n",
+       "duration_ms           int64\n",
+       "explicit              int64\n",
+       "danceability        float64\n",
+       "energy              float64\n",
+       "key                   int64\n",
+       "loudness            float64\n",
+       "mode                  int64\n",
+       "speechiness         float64\n",
+       "acousticness        float64\n",
+       "instrumentalness    float64\n",
+       "liveness            float64\n",
+       "valence             float64\n",
+       "tempo               float64\n",
+       "time_signature        int64\n",
+       "track_genre          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>popularity</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>33.238535</td>\n",
+       "      <td>22.305078</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>17.00000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>50.0000</td>\n",
+       "      <td>100.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>duration_ms</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>228029.153114</td>\n",
+       "      <td>107297.712645</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>174066.00000</td>\n",
+       "      <td>212906.000000</td>\n",
+       "      <td>261506.0000</td>\n",
+       "      <td>5237295.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>explicit</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.085500</td>\n",
+       "      <td>0.279626</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>danceability</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.566800</td>\n",
+       "      <td>0.173542</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.45600</td>\n",
+       "      <td>0.580000</td>\n",
+       "      <td>0.6950</td>\n",
+       "      <td>0.985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>energy</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.641383</td>\n",
+       "      <td>0.251529</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.47200</td>\n",
+       "      <td>0.685000</td>\n",
+       "      <td>0.8540</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>5.309140</td>\n",
+       "      <td>3.559987</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.0000</td>\n",
+       "      <td>11.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loudness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>-8.258960</td>\n",
+       "      <td>5.029337</td>\n",
+       "      <td>-49.531</td>\n",
+       "      <td>-10.01300</td>\n",
+       "      <td>-7.004000</td>\n",
+       "      <td>-5.0030</td>\n",
+       "      <td>4.532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mode</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.637553</td>\n",
+       "      <td>0.480709</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>speechiness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.084652</td>\n",
+       "      <td>0.105732</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.03590</td>\n",
+       "      <td>0.048900</td>\n",
+       "      <td>0.0845</td>\n",
+       "      <td>0.965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>acousticness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.314910</td>\n",
+       "      <td>0.332523</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.01690</td>\n",
+       "      <td>0.169000</td>\n",
+       "      <td>0.5980</td>\n",
+       "      <td>0.996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.156050</td>\n",
+       "      <td>0.309555</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000042</td>\n",
+       "      <td>0.0490</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>liveness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.213553</td>\n",
+       "      <td>0.190378</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.09800</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.2730</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>valence</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.474068</td>\n",
+       "      <td>0.259261</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.26000</td>\n",
+       "      <td>0.464000</td>\n",
+       "      <td>0.6830</td>\n",
+       "      <td>0.995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tempo</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>122.147837</td>\n",
+       "      <td>29.978197</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>99.21875</td>\n",
+       "      <td>122.017000</td>\n",
+       "      <td>140.0710</td>\n",
+       "      <td>243.372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time_signature</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>3.904035</td>\n",
+       "      <td>0.432621</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>4.00000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.0000</td>\n",
+       "      <td>5.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     count           mean            std     min  \\\n",
+       "popularity        114000.0      33.238535      22.305078   0.000   \n",
+       "duration_ms       114000.0  228029.153114  107297.712645   0.000   \n",
+       "explicit          114000.0       0.085500       0.279626   0.000   \n",
+       "danceability      114000.0       0.566800       0.173542   0.000   \n",
+       "energy            114000.0       0.641383       0.251529   0.000   \n",
+       "key               114000.0       5.309140       3.559987   0.000   \n",
+       "loudness          114000.0      -8.258960       5.029337 -49.531   \n",
+       "mode              114000.0       0.637553       0.480709   0.000   \n",
+       "speechiness       114000.0       0.084652       0.105732   0.000   \n",
+       "acousticness      114000.0       0.314910       0.332523   0.000   \n",
+       "instrumentalness  114000.0       0.156050       0.309555   0.000   \n",
+       "liveness          114000.0       0.213553       0.190378   0.000   \n",
+       "valence           114000.0       0.474068       0.259261   0.000   \n",
+       "tempo             114000.0     122.147837      29.978197   0.000   \n",
+       "time_signature    114000.0       3.904035       0.432621   0.000   \n",
+       "\n",
+       "                           25%            50%          75%          max  \n",
+       "popularity            17.00000      35.000000      50.0000      100.000  \n",
+       "duration_ms       174066.00000  212906.000000  261506.0000  5237295.000  \n",
+       "explicit               0.00000       0.000000       0.0000        1.000  \n",
+       "danceability           0.45600       0.580000       0.6950        0.985  \n",
+       "energy                 0.47200       0.685000       0.8540        1.000  \n",
+       "key                    2.00000       5.000000       8.0000       11.000  \n",
+       "loudness             -10.01300      -7.004000      -5.0030        4.532  \n",
+       "mode                   0.00000       1.000000       1.0000        1.000  \n",
+       "speechiness            0.03590       0.048900       0.0845        0.965  \n",
+       "acousticness           0.01690       0.169000       0.5980        0.996  \n",
+       "instrumentalness       0.00000       0.000042       0.0490        1.000  \n",
+       "liveness               0.09800       0.132000       0.2730        1.000  \n",
+       "valence                0.26000       0.464000       0.6830        0.995  \n",
+       "tempo                 99.21875     122.017000     140.0710      243.372  \n",
+       "time_signature         4.00000       4.000000       4.0000        5.000  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe().T"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -825,13 +1123,6 @@
    ],
    "source": [
     "df['track_genre'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exploratory Data Analysis"
    ]
   },
   {
