--- a/working.ipynb
+++ b/working.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "[114000 rows x 20 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "[114000 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1020,18 +1020,19 @@
        "time_signature         4.00000       4.000000       4.0000        5.000  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe().T"
+    "summary = df.describe().T\n",
+    "summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1053,7 @@
        "Name: count, Length: 46589, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1085,7 @@
        "Name: count, Length: 31437, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1117,7 @@
        "Name: count, Length: 114, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1463,7 @@
        "[114000 rows x 15 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1487,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.025\n",
       "Method:                 Least Squares   F-statistic:                     208.2\n",
       "Date:                Tue, 11 Mar 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        15:40:37   Log-Likelihood:            -5.1427e+05\n",
+      "Time:                        16:00:20   Log-Likelihood:            -5.1427e+05\n",
       "No. Observations:              114000   AIC:                         1.029e+06\n",
       "Df Residuals:                  113985   BIC:                         1.029e+06\n",
       "Df Model:                          14                                         \n",
@@ -1530,8 +1531,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our R-squared value is 0.025 which means that our model only explains 2.5% variance in popularity. This means that there may be other factors not included in our dataset that influence our target variable popularity. Many predictors have p-values < 0.05, meaning they have a significant impoact on popularity.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1563,8 +1571,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All VIF are less than 5 meaning that multicollinearity is not a major concern. Our highest VIF are energy: 4.268 and loudness: 3.286."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1585,13 +1600,264 @@
        "Name: count, Length: 101, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['popularity'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>popularity</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>33.238535</td>\n",
+       "      <td>22.305078</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>17.00000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>50.0000</td>\n",
+       "      <td>100.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>duration_ms</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>228029.153114</td>\n",
+       "      <td>107297.712645</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>174066.00000</td>\n",
+       "      <td>212906.000000</td>\n",
+       "      <td>261506.0000</td>\n",
+       "      <td>5237295.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>explicit</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.085500</td>\n",
+       "      <td>0.279626</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>danceability</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.566800</td>\n",
+       "      <td>0.173542</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.45600</td>\n",
+       "      <td>0.580000</td>\n",
+       "      <td>0.6950</td>\n",
+       "      <td>0.985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>energy</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.641383</td>\n",
+       "      <td>0.251529</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.47200</td>\n",
+       "      <td>0.685000</td>\n",
+       "      <td>0.8540</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>5.309140</td>\n",
+       "      <td>3.559987</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.0000</td>\n",
+       "      <td>11.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loudness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>-8.258960</td>\n",
+       "      <td>5.029337</td>\n",
+       "      <td>-49.531</td>\n",
+       "      <td>-10.01300</td>\n",
+       "      <td>-7.004000</td>\n",
+       "      <td>-5.0030</td>\n",
+       "      <td>4.532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mode</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.637553</td>\n",
+       "      <td>0.480709</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>speechiness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.084652</td>\n",
+       "      <td>0.105732</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.03590</td>\n",
+       "      <td>0.048900</td>\n",
+       "      <td>0.0845</td>\n",
+       "      <td>0.965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>acousticness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.314910</td>\n",
+       "      <td>0.332523</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.01690</td>\n",
+       "      <td>0.169000</td>\n",
+       "      <td>0.5980</td>\n",
+       "      <td>0.996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.156050</td>\n",
+       "      <td>0.309555</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000042</td>\n",
+       "      <td>0.0490</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>liveness</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.213553</td>\n",
+       "      <td>0.190378</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.09800</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.2730</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>valence</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>0.474068</td>\n",
+       "      <td>0.259261</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.26000</td>\n",
+       "      <td>0.464000</td>\n",
+       "      <td>0.6830</td>\n",
+       "      <td>0.995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tempo</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>122.147837</td>\n",
+       "      <td>29.978197</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>99.21875</td>\n",
+       "      <td>122.017000</td>\n",
+       "      <td>140.0710</td>\n",
+       "      <td>243.372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time_signature</th>\n",
+       "      <td>114000.0</td>\n",
+       "      <td>3.904035</td>\n",
+       "      <td>0.432621</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>4.00000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.0000</td>\n",
+       "      <td>5.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     count           mean            std     min  \\\n",
+       "popularity        114000.0      33.238535      22.305078   0.000   \n",
+       "duration_ms       114000.0  228029.153114  107297.712645   0.000   \n",
+       "explicit          114000.0       0.085500       0.279626   0.000   \n",
+       "danceability      114000.0       0.566800       0.173542   0.000   \n",
+       "energy            114000.0       0.641383       0.251529   0.000   \n",
+       "key               114000.0       5.309140       3.559987   0.000   \n",
+       "loudness          114000.0      -8.258960       5.029337 -49.531   \n",
+       "mode              114000.0       0.637553       0.480709   0.000   \n",
+       "speechiness       114000.0       0.084652       0.105732   0.000   \n",
+       "acousticness      114000.0       0.314910       0.332523   0.000   \n",
+       "instrumentalness  114000.0       0.156050       0.309555   0.000   \n",
+       "liveness          114000.0       0.213553       0.190378   0.000   \n",
+       "valence           114000.0       0.474068       0.259261   0.000   \n",
+       "tempo             114000.0     122.147837      29.978197   0.000   \n",
+       "time_signature    114000.0       3.904035       0.432621   0.000   \n",
+       "\n",
+       "                           25%            50%          75%          max  \n",
+       "popularity            17.00000      35.000000      50.0000      100.000  \n",
+       "duration_ms       174066.00000  212906.000000  261506.0000  5237295.000  \n",
+       "explicit               0.00000       0.000000       0.0000        1.000  \n",
+       "danceability           0.45600       0.580000       0.6950        0.985  \n",
+       "energy                 0.47200       0.685000       0.8540        1.000  \n",
+       "key                    2.00000       5.000000       8.0000       11.000  \n",
+       "loudness             -10.01300      -7.004000      -5.0030        4.532  \n",
+       "mode                   0.00000       1.000000       1.0000        1.000  \n",
+       "speechiness            0.03590       0.048900       0.0845        0.965  \n",
+       "acousticness           0.01690       0.169000       0.5980        0.996  \n",
+       "instrumentalness       0.00000       0.000042       0.0490        1.000  \n",
+       "liveness               0.09800       0.132000       0.2730        1.000  \n",
+       "valence                0.26000       0.464000       0.6830        0.995  \n",
+       "tempo                 99.21875     122.017000     140.0710      243.372  \n",
+       "time_signature         4.00000       4.000000       4.0000        5.000  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary"
    ]
   },
   {
