--- a/working.ipynb
+++ b/working.ipynb
@@ -2840,61 +2840,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* negative effect on popularity: duration_ms, energy, key, mode, speechiness, acousticness, instrumentalness, liveness, valence, tempo, time_signature\n",
+    "* positive effect on popularity: explicit, danceability, loudness, time_signature\n",
+    "\n",
+    "* Our model performs a little better than just random guessing 50% but it has a low recall of 0.01. \n",
+    "\n",
+    "* Since our model has a low variance of 3.3%, this means that the features in our analysis determines a small portion of the song's popularity. There are probably other features that are not within our dataset that might contribute to the songs popularity."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.754928454348115\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['track_id', 'artists', 'album_name', 'track_name', 'popularity',\n",
+       "       'duration_ms', 'explicit', 'danceability', 'energy', 'key', 'loudness',\n",
+       "       'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness',\n",
+       "       'valence', 'tempo', 'time_signature', 'track_genre',\n",
+       "       'binary_popularity'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "\n",
-    "y_pred_prob = logit_model.predict(test)\n",
-    "y_pred = (y_pred_prob > 0.5).astype(int)\n",
-    "\n",
-    "# accuracy\n",
-    "accuracy = accuracy_score(test[\"binary_popularity\"], y_pred)\n",
-    "print(\"Accuracy:\", accuracy)"
+    "df.columns"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* negative effect on popularity: duration_ms, energy, key, mode, speechiness, acousticness, instrumentalness, liveness, valence, tempo, time_signature\n",
-    "* positive effect on popularity: explicit, danceability, loudness, time_signature"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.76      1.00      0.86     17057\n",
-      "           1       0.41      0.01      0.01      5516\n",
-      "\n",
-      "    accuracy                           0.75     22573\n",
-      "   macro avg       0.58      0.50      0.44     22573\n",
-      "weighted avg       0.67      0.75      0.65     22573\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(metrics.classification_report(test[\"binary_popularity\"], y_pred))\n"
+    "# Ridge"
    ]
   },
   {
@@ -2902,20 +2888,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# List of predictor features\n",
+    "\n",
     "features = ['duration_ms', 'explicit', 'danceability', 'energy', 'key', 'loudness', \n",
     "            'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', \n",
     "            'valence', 'tempo', 'time_signature']\n",
     "\n",
-    "# Assuming your target variable is 'binary_popularity' (change if necessary)\n",
+    "\n",
     "X = df[features]\n",
     "y = df['binary_popularity']\n"
    ]
@@ -3036,6 +3015,13 @@
    "source": [
     "* small coefficients: key, loudness, tempo\n",
     "- these have a very minimal impact on popularity compare to the other features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PCA"
    ]
   },
   {
